WP-8911 Fixing the missing exec ed main menu on mobile portrait.

--- a/css/style.css
+++ b/css/style.css
@@ -9294,9 +9294,6 @@ input.signup-submit:hover {
 }
 
 @media (max-width: 37.4375em) {
-  .page-exec-ed #header-wrapper {
-    overflow: auto;
-  }
   .page-exec-ed #main {
     overflow: auto;
   }
